--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
-  "name": "ballon-web-storefront",
+  "name": "balloon-web-storefront",
   "version": "0.1.0",
   "private": true,
+  "keywords": ["Web Store Front", "ecommerce React+Typescript Project", "Balloon Web React+Typescript", "Balloon", "React", "Typescript"],
+  "author": "Zahra <sarlak.zh@gmail.com>(https://github.com/sarlakZM)",
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.4.4",
+    "@mui/material": "^5.4.4",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -10,17 +16,22 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.12",
+    "@types/styled-components": "^5.1.24",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.3",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "jest --coverage", 
+    "test:watch": "jest --watch"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jest": "^27.5.1"
   }
 }
